Fixing bugs including wrong placement of hamburger menu icon and overlapping content with the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,12 @@
 
 body {
     min-height: 100vh;
-    display: grid;
-    grid-template-rows: 1fr auto;
+    display: flex;
+    flex-direction: column;
     font-family: oswald, roboto;
     font-weight: 300;
     background-color: rgb(196, 237, 115);
     color: rgb(198, 130, 5);
-    flex-direction: column;
 }
 
 header {
@@ -25,8 +24,9 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
+    display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     box-shadow: 0 2px 2px gray;
 }
 
@@ -98,24 +98,25 @@ nav {
 /* Main section */
 
 main {
-    flex: auto;
+    flex: 1 0 auto;
+    margin-top: 45px;
     display: flex;
     flex-direction: column;
 }
 
 #hero {
-    height: 400px;
+    min-height: 400px;
     width: 100%;
     background: url('../images/pexels-rdne-8363119.jpg') no-repeat center center/cover;
 }
 
 #welcome {
+    position: absolute;
     background-color: orange;
     font-size: 100%;
-    position: absolute;
-    bottom: 60px;
-    width: 80%;
-    min-height: 100px;
+    max-width: 80%;
+    bottom: 70px;
+    min-height: 60px;
     padding-top: 5px;
     padding-left: 10px;
 }
@@ -134,6 +135,7 @@ main {
     font-size: 100%;
     width: 80%;
     padding-left: 10px;
+    margin: 10px 0px 10px 0px;
 }
 
 .grid-container {
@@ -149,45 +151,42 @@ main {
   .image1 {
     grid-area: image1;
     width: 100%;
-    height: 100%;
     object-fit: cover;
   }
 
   .image2 {
     grid-area: image2;
     width: 100%;
-    height: 100%;
     object-fit: cover;
   }
 
   .image3 {
     grid-area: image3;
     width: 100%;
-    height: 100%;
     object-fit: cover;
   }
 
   .image4 {
     grid-area: image1;
     width: 100%;
-    height: 100%;
     object-fit: cover;
   }
   
 /* footer section */
 
 footer {
-    position:relative
+    position: relative;
     bottom: 0;
+    height: 50px;
+    margin-top: 2px;
 }
 
 #socials {
     text-align: center;
     padding: 20px 0;
-    display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-    color: orange;
+    display: flex;
 }
 
 #socials i {
@@ -205,6 +204,14 @@ footer {
         box-shadow: none;
         width: fit-content;
         padding-right: 1rem;
+    }
+
+    #navbar {
+        display: flex;
+    }
+
+    #navbar > li {
+        padding-left: 1rem;
     }
 }
     
